restructured and started with the violations chapter

--- a/sources.bib
+++ b/sources.bib
@@ -99,3 +99,11 @@
   year={2016},
   publisher={Manning}
 }
+
+@inproceedings{parent2006possible,
+  title={A possible future of software development},
+  author={Parent, Sean},
+  booktitle={Talk at BoostCon},
+  year={2007},
+  url={https://stlab.cc/legacy/figures/Boostcon_possible_future.pdf}
+}
