--- a/survey.tex
+++ b/survey.tex
@@ -1,4 +1,4 @@
-\documentclass[acmtoc, authorversion]{acmart}
+\documentclass[format=acmtog]{acmart}
 
 \usepackage{booktabs} % For formal tables
 
@@ -6,6 +6,7 @@
 \citestyle{acmauthoryear}
 \setcitestyle{square}
 
+%\usepackage{list­ings}
 
 \usepackage[ruled]{algorithm2e} % For algorithms
 \renewcommand{\algorithmcfname}{ALGORITHM}
@@ -60,24 +61,7 @@
 \renewcommand\shortauthors{Bartelheimer, J. }
 
 \begin{abstract}
-	Multifrequency media access control has been well understood in
-	general wireless ad hoc networks, while in wireless sensor networks,
-	researchers still focus on single frequency solutions. In wireless
-	sensor networks, each device is typically equipped with a single
-	radio transceiver and applications adopt much smaller packet sizes
-	compared to those in general wireless ad hoc networks. Hence, the
-	multifrequency MAC protocols proposed for general wireless ad hoc
-	networks are not suitable for wireless sensor network applications,
-	which we further demonstrate through our simulation experiments. In
-	this article, we propose MMSN, which takes advantage of
-	multifrequency availability while, at the same time, takes into
-	consideration the restrictions of wireless sensor networks. Through
-	extensive experiments, MMSN exhibits the prominent ability to utilize
-	parallel transmissions among neighboring nodes. When multiple physical
-	frequencies are available, it also achieves increased energy
-	efficiency, demonstrating the ability to work against radio
-	interference and the tolerance to a wide range of measured time
-	synchronization errors.
+	insert abstract here
 \end{abstract}
 
 
@@ -112,86 +96,101 @@
 %
 % End generated code
 %
-
-
 \keywords{design patter, observer pattern, event handling, data-flow language, reactive programming, user interface programming, scala}
-
-
-
 \maketitle
 
 %input
 
 \section{Introduction}
 
-In contrast to traditional batch mode programs modern applications are reactive and event driven. 
-examples like the GUI 
-reactive is hard and errorprone, dealing with continuous event occourance and user input requires a considerable amount of engineering.
-A programming paradigm well suited for these event-driven and interative applications is reactive programming
-reactive programming gained popularity
-
-early approach in reactive programming is the use of the observer Pattern
-
-in the paper ``Deprecating the Observer Pattern'' the authors criticize the use of the observer pattern for reactive programs,
-the title already is a hard claim by itself.
-
+	In contrast to traditional batch mode programs modern applications are reactive and event driven. 
+	examples like the GUI 
+	reactive is hard and errorprone, dealing with continuous event occourance and user input requires a considerable amount of engineering.
+	
+	quote an Adobe presentation from 2007~\cite{parent2006possible} on current production systems:
+	\begin{itemize}
+		\item 1/3 of the code in Adobe’s desktop applications is devoted to event handling logic	
+		\item 1/2 of the bugs reported during a product cycle exist in this code
+	\end{itemize}
 
 
-\subsection{UI Event handling}
+	
+	A programming paradigm well suited for these event-driven and interative applications is reactive programming
+	reactive programming gained popularity
+
+	early approach in reactive programming is the use of the observer Pattern
+	
+	\subsection{UI Event handling}
+
+
+
+	in the paper ``Deprecating the Observer Pattern'' the authors criticize the use of the observer pattern for reactive programs,
+	the title already is a hard claim by itself.
+
+
+
+\section{Observer Pattern}
+	\cite{Gamma:1995}
+
+	\subsection{Violations of software engineering principles}
+		In \cite{Maier:2012} it is shown by means of code exmple that the observer pattern violates a set of software engineering principles.
+		The violated principles are:
+
+		\subsubsection{Side-effects}
+			Often several observers are used to implement a single Operation,
+			%e.g. a \lstinline|onClick| and a \lstinline|onRelease| observer are necessary to implement a drag and drop operation.
+			Therefore, the observer patterns promote side-effects and already on the API level.
+
+		\subsubsection{Encapsulation}
+			In many cases multiple observers are used to simulate a state machine. 
+			The state, e.g. a dragged object, is stored in a variables within a shared scope.
+			As this broader scope of these shared variables escapes the scope of the observers, the observer pattern violates the encapsulation principle.
+			
+		\subsubsection{Composability}
+
+		\subsubsection{Resource management}
+
+		\subsubsection{Separation of concerns}
+
+		\subsubsection{Data consistency}
+
+		\subsubsection{Uniformity}
+
+		\subsubsection{Abstraction}
+
+		\subsubsection{Semantic distance}
 
 \section{Reactive programming}
 
-\subsection{Functional reactive programming (FRP)}
+	\subsection{Functional reactive programming (FRP)}
 
-first in functional languages by~\cite{Elliott}
+		first in functional languages by~\cite{Elliott}
 
-signals behaviour~\cite{Bainomugisha:2013}
-
-\section{Observer Pattern}
-
-\cite{Gamma:1995}
-
-\subsection{Violations of software engineering principles}
-
-\subsubsection{Side-effects}
-
-the observer promotes side effects
-
-\subsubsection{Encapsulation}
-
-\subsubsection{Composability}
-
-\subsubsection{Resource management}
-
-\subsubsection{Separation of concerns}
-
-\subsubsection{Data consistency}
-
-\subsubsection{Uniformity}
-
-\subsubsection{Abstraction}
-
-\subsubsection{Semantic distance}
+		signals behaviour~\cite{Bainomugisha:2013}
+	
 
 \section{Scala.React}
 
-\subsection{First class events}
+	\subsection{First class events}
 
-\subsection{Reactor}
+	\subsection{Reactor}
 
-\subsection{Embedded dataflow langugage}
+	\subsection{Embedded dataflow langugage}
 
 \section{Evolution of reactive programming frameworks}
 
-\subsection{Reactive databinding}
+	with lambda-expressions and stream java added data-flow elements to the language for more declarative programming
+	added in java 8 and already extended in java 9
 
-Font-end frameworks inspired by the Flapjax reactive language~\cite{Meyerovich:2009}
+	\subsection{Reactive databinding}
 
-Metor example: ~\cite{hochhaus2016meteor}
+		Font-end frameworks inspired by the Flapjax reactive language~\cite{Meyerovich:2009}
 
-based on fl
+		Metor example: ~\cite{hochhaus2016meteor}
 
-\subsection{Reactive streams}
+		based on fl
+
+	\subsection{Reactive streams}
 
 % Bibliography
 \bibliographystyle{ACM-Reference-Format}
