section observer added

--- a/sources.bib
+++ b/sources.bib
@@ -107,3 +107,12 @@
   year={2007},
   url={https://stlab.cc/legacy/figures/Boostcon_possible_future.pdf}
 }
+
+@online{oracleObservable,
+  author={Oracle},
+  year = {2017},
+  title={Oracle docs: Class Observable},
+  url={https://docs.oracle.com/javase/7/docs/api/java/util/Observable.html},
+  month = apr,
+  lastaccessed = {April 17, 2018},
+}
