some sources added, notes for multiple sections and started with RP section

--- a/sources.bib
+++ b/sources.bib
@@ -19,31 +19,37 @@
 %%% ====================================================================
 
 @article{Elliott,
- author = {Elliott, Conal and Hudak, Paul},
- title = {Functional Reactive Animation},
- journal = {SIGPLAN Not.},
- issue_date = {Aug. 1997},
- volume = {32},
- number = {8},
- month = aug,
- year = {1997},
- issn = {0362-1340},
- pages = {263--273},
- numpages = {11},
- url = {http://doi.acm.org/10.1145/258949.258973},
- doi = {10.1145/258949.258973},
- acmid = {258973},
- publisher = {ACM},
- address = {New York, NY, USA},
+  author = {Elliott, Conal and Hudak, Paul},
+  title = {Functional Reactive Animation},
+  journal = {SIGPLAN Not.},
+  issue_date = {Aug. 1997},
+  volume = {32},
+  number = {8},
+  month = aug,
+  year = {1997},
+  issn = {0362-1340},
+  pages = {263--273},
+  numpages = {11},
+  url = {http://doi.acm.org/10.1145/258949.258973},
+  doi = {10.1145/258949.258973},
+  acmid = {258973},
+  publisher = {ACM},
+  address = {New York, NY, USA},
 } 
 
 @book{Gamma:1995,
- author = {Gamma, Erich and Helm, Richard and Johnson, Ralph and Vlissides, John},
- title = {Design Patterns: Elements of Reusable Object-oriented Software},
- year = {1995},
- isbn = {0-201-63361-2},
- publisher = {Addison-Wesley Longman Publishing Co., Inc.},
- address = {Boston, MA, USA},
+  author = {Gamma, Erich and Helm, Richard and Johnson, Ralph and Vlissides, John},
+  title = {Design Patterns: Elements of Reusable Object-oriented Software},
+  year = {1995},
+  isbn = {0-201-63361-2},
+  publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+  address = {Boston, MA, USA},
+}
+@article{Maier:2010,
+  title = {Deprecating the Observer Pattern},
+  author = {Maier, Ingo and Rompf, Tiark and Odersky, Martin},
+  pages = {18},
+  year = {2010}
 }
 
 @techreport{Maier:2012,
@@ -53,44 +59,44 @@
 }
 
 @article{Bainomugisha:2013,
- author = {Bainomugisha, Engineer and Carreton, Andoni Lombide and Cutsem, Tom van and Mostinckx, Stijn and Meuter, Wolfgang de},
- title = {A Survey on Reactive Programming},
- journal = {ACM Comput. Surv.},
- issue_date = {August 2013},
- volume = {45},
- number = {4},
- month = aug,
- year = {2013},
- issn = {0360-0300},
- pages = {52:1--52:34},
- articleno = {52},
- numpages = {34},
- url = {http://doi.acm.org/10.1145/2501654.2501666},
- doi = {10.1145/2501654.2501666},
- acmid = {2501666},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {Reactive programming, dataflow programming, event-driven applications, functional reactive programming, interactive applications, reactive systems},
+  author = {Bainomugisha, Engineer and Carreton, Andoni Lombide and Cutsem, Tom van and Mostinckx, Stijn and Meuter, Wolfgang de},
+  title = {A Survey on Reactive Programming},
+  journal = {ACM Comput. Surv.},
+  issue_date = {August 2013},
+  volume = {45},
+  number = {4},
+  month = aug,
+  year = {2013},
+  issn = {0360-0300},
+  pages = {52:1--52:34},
+  articleno = {52},
+  numpages = {34},
+  url = {http://doi.acm.org/10.1145/2501654.2501666},
+  doi = {10.1145/2501654.2501666},
+  acmid = {2501666},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {Reactive programming, dataflow programming, event-driven applications, functional reactive programming, interactive applications, reactive systems},
 } 
 
 @article{Meyerovich:2009,
- author = {Meyerovich, Leo A. and Guha, Arjun and Baskin, Jacob and Cooper, Gregory H. and Greenberg, Michael and Bromfield, Aleks and Krishnamurthi, Shriram},
- title = {Flapjax: A Programming Language for Ajax Applications},
- journal = {SIGPLAN Not.},
- issue_date = {October 2009},
- volume = {44},
- number = {10},
- month = oct,
- year = {2009},
- issn = {0362-1340},
- pages = {1--20},
- numpages = {20},
- url = {http://doi.acm.org/10.1145/1639949.1640091},
- doi = {10.1145/1639949.1640091},
- acmid = {1640091},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {functional reactive programming, javascript, web programming},
+  author = {Meyerovich, Leo A. and Guha, Arjun and Baskin, Jacob and Cooper, Gregory H. and Greenberg, Michael and Bromfield, Aleks and Krishnamurthi, Shriram},
+  title = {Flapjax: A Programming Language for Ajax Applications},
+  journal = {SIGPLAN Not.},
+  issue_date = {October 2009},
+  volume = {44},
+  number = {10},
+  month = oct,
+  year = {2009},
+  issn = {0362-1340},
+  pages = {1--20},
+  numpages = {20},
+  url = {http://doi.acm.org/10.1145/1639949.1640091},
+  doi = {10.1145/1639949.1640091},
+  acmid = {1640091},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {functional reactive programming, javascript, web programming},
 } 
 
 @book{hochhaus2016meteor,
@@ -114,5 +120,29 @@
   title={Oracle docs: Class Observable},
   url={https://docs.oracle.com/javase/7/docs/api/java/util/Observable.html},
   month = apr,
-  lastaccessed = {April 17, 2018},
+  lastaccessed = {April 17, 2018}
 }
+
+@online{reactiveManifesto2014,
+  author={Bon{\'e}r, Jonas and Farley, Dave and Kuhn, Roland and Thompson, Martin},
+  year= {2014},
+  title={The Reactive Manifesto},
+  url={https://www.reactivemanifesto.org/},
+  month = sep,
+  lastaccessed = {April 17, 2018}
+}
+
+@inproceedings{Salvaneschi:2015,
+ author = {Salvaneschi, Guido and Margara, Alessandro and Tamburrelli, Giordano},
+ title = {Reactive Programming: A Walkthrough},
+ booktitle = {Proceedings of the 37th International Conference on Software Engineering - Volume 2},
+ series = {ICSE '15},
+ year = {2015},
+ location = {Florence, Italy},
+ pages = {953--954},
+ numpages = {2},
+ url = {http://dl.acm.org/citation.cfm?id=2819009.2819226},
+ acmid = {2819226},
+ publisher = {IEEE Press},
+ address = {Piscataway, NJ, USA},
+} 
